--- a/app/views/prototypes/new-items/add.html
+++ b/app/views/prototypes/new-items/add.html
@@ -164,16 +164,15 @@
     </legend>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
+        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
           English / Welsh / Scottish / Northern Irish / British
         </label>
-        
       </div>
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group">
           Irish
         </label>
         
@@ -181,7 +180,7 @@
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group">
           Gypsy or Irish Traveller
         </label>
         
@@ -189,7 +188,7 @@
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group">
           Any Other White background
         </label>
         
@@ -197,28 +196,28 @@
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group">
           White and Black Caribbean
         </label>
         
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-2" name="ethnic-group" type="radio" value="black-african-black-british-or-caribbean" aria-describedby="ethnic-group-2-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-2">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-2">
           White and Black African
         </label>
         
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-3" name="ethnic-group" type="radio" value="mixed-or-multiple-ethnic-groups" aria-describedby="ethnic-group-3-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-3">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-3">
           White and Asian
         </label>
         
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-4" name="ethnic-group" type="radio" value="white" aria-describedby="ethnic-group-4-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-4">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-4">
           Any Other Mixed / multiple ethnic background
         </label>
         
@@ -227,7 +226,7 @@
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
           Indian
         </label>
         
@@ -235,7 +234,7 @@
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
           Pakistani
         </label>
         
@@ -243,7 +242,7 @@
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
           Bangladeshi
         </label>
         
@@ -251,7 +250,7 @@
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
           Chinese
         </label>
         
@@ -259,7 +258,7 @@
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
           Any other Asian background
         </label>
         
@@ -267,7 +266,7 @@
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
           African
         </label>
         
@@ -275,7 +274,7 @@
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
           Caribbean
         </label>
         
@@ -283,7 +282,7 @@
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
           Any other Black / African / Caribbean background
         </label>
         
@@ -291,7 +290,7 @@
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
           Arab
         </label>
         
@@ -299,7 +298,7 @@
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
           Any other ethnic group
         </label>
         
@@ -315,6 +314,50 @@
   </fieldset>
 
   <br><br><br>
+
+  <div class="govuk-form-group">
+    <fieldset class="govuk-fieldset">
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+        <h1 class="govuk-fieldset__heading">
+          Where do you live?
+        </h1>
+      </legend>
+      <div class="govuk-radios">
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+          <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+            England
+          </label>
+        </div>
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+          <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+            Scotland
+          </label>
+        </div>
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
+          <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+            Wales
+          </label>
+        </div>
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
+          <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
+            Northern Ireland
+          </label>
+        </div>
+        <div class="govuk-radios__divider">or</div>
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="where-do-you-live-6" name="where-do-you-live" type="radio" value="abroad">
+          <label class="govuk-label govuk-radios__label" for="where-do-you-live-6">
+            I am a British citizen living abroad
+          </label>
+        </div>
+      </div>
+  
+    </fieldset>
+  </div>
 
 
   <fieldset class="govuk-fieldset">
