--- a/app/views/prototypes/new-items/add.html
+++ b/app/views/prototypes/new-items/add.html
@@ -307,7 +307,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-6" name="ethnic-group" type="radio" value="prefer-not-to-say">
         <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-6">
-          Not provided
+          Prefer not to say
         </label>
       </div>
     </div>
