--- a/app/views/prototypes/new-items/highest-subject.html
+++ b/app/views/prototypes/new-items/highest-subject.html
@@ -92,7 +92,7 @@
           Level 4
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Certificate of Higher Education, BTech professional diplomas
+          Certificate of Higher Education, BTEC professional diplomas
         </span>
         
       </div>
@@ -114,7 +114,7 @@
           Level 6
         </label>
         <span id="sign-in-item-hint" class="govuk-hint govuk-radios__hint">
-          Bachelors degree, BTech professional diplomas
+          Bachelors degree, BTEC professional diplomas
         </span>
       </div>
 
