--- a/app/views/prototypes/new-items/add.html
+++ b/app/views/prototypes/new-items/add.html
@@ -163,6 +163,9 @@
       <h2 class="govuk-heading-m">Ethnicity</h2>
     </legend>
     <div class="govuk-radios">
+      <label class="govuk-label--s" for="full-name">
+        White
+      </label><br><br>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
@@ -192,7 +195,11 @@
           Any Other White background
         </label>
         
-      </div>
+      </div><br><br>
+
+      <label class="govuk-label--s" for="full-name">
+        Mixed / Multiple ethnic groups
+      </label><br><br>
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
@@ -220,10 +227,12 @@
         <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-4">
           Any Other Mixed / multiple ethnic background
         </label>
-        
+      
+      </div><br><br>
 
-
-      </div>
+      <label class="govuk-label--s" for="full-name">
+        Asian / Asian British
+      </label><br><br>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
@@ -264,6 +273,11 @@
         
       </div>
 
+      <br><br>
+      <label class="govuk-label--s" for="full-name">
+        Black / African / Caribbean / Black British
+      </label><br><br>
+
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
         <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-5">
@@ -287,6 +301,11 @@
         </label>
         
       </div>
+
+      <br><br>
+      <label class="govuk-label--s" for="full-name">
+        Other ethnic group
+      </label><br><br>
 
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
