--- a/app/views/prototypes/alex/add.html
+++ b/app/views/prototypes/alex/add.html
@@ -36,8 +36,7 @@
   What is their ethnicity?
 </h1>
 
-<h2 class="govuk-heading-m">
-  White
+<h2 class="govuk-heading-m">White
 </h2>
 
 <ul class="browse-list">
@@ -70,78 +69,129 @@
               
 </ul><br><br>
 
+<h2 class="govuk-heading-m">Mixed / Multiple ethnic groups
+</h2>
+
+<ul class="browse-list">
+  
+
+  <div class="govuk-form-group">
+    <label class="govuk-label" for="postcode">
+      White and Black Caribbean
+    
+    </label>
+    <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
+    
+    <div class="govuk-form-group">
+      <label class="govuk-label" for="postcode">
+        White and Black African
+        
+      </label>
+      <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
+    
+      <div class="govuk-form-group">
+        <label class="govuk-label" for="postcode">
+          White and Asian
+        
+        </label>
+        <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
+    
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="postcode">
+            Any other Mixed / Multiple ethnic background</label>
+          <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
+    
+          
+              
+</ul><br><br>
+
+<h2 class="govuk-heading-m">Asian / Asian British
+</h2>
+
+<ul class="browse-list">
+  
+
+  <div class="govuk-form-group">
+    <label class="govuk-label" for="postcode">
+      Indian
+    
+    </label>
+    <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
+    
+    <div class="govuk-form-group">
+      <label class="govuk-label" for="postcode">
+        Pakistani
+
+        
+      </label>
+      <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
+    
+      <div class="govuk-form-group">
+        <label class="govuk-label" for="postcode">
+          Bangladeshi
+
+        
+        </label>
+        <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
+    
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="postcode">
+            Any other Asian background</label>
+          <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
+    
+          
+              
+</ul><br><br>
+
+<h2 class="govuk-heading-m">Black / African / Caribbean / Black British
+</h2>
+
+<ul class="browse-list">
+  
+
+  <div class="govuk-form-group">
+    <label class="govuk-label" for="postcode">
+      African
+    
+    </label>
+    <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
+    
+    <div class="govuk-form-group">
+      <label class="govuk-label" for="postcode">
+        Caribbean
+        
+      </label>
+      <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
+    
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="postcode">
+            Any other Black / African / Caribbean background</label>
+          <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>      
+              
+</ul><br><br>
+
+<h2 class="govuk-heading-m">Other ethnic group
+</h2>
+
+<ul class="browse-list">
+  
+
+  <div class="govuk-form-group">
+    <label class="govuk-label" for="postcode">
+      Arab
+    
+    </label>
+    <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
+    
+    
+        <div class="govuk-form-group">
+          <label class="govuk-label" for="postcode">
+            Any other ethnic group</label>
+          <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>      
+              
+</ul><br><br>
 
   <fieldset class="govuk-fieldset">
-    
-    
-      
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="ethnic-group-2" name="ethnic-group" type="radio" value="black-african-black-british-or-caribbean" aria-describedby="ethnic-group-2-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-2">
-          Mixed / Multiple ethnic groups
-        </label>
-        <span id="ethnic-group-2-item-hint" class="govuk-hint govuk-radios__hint">
-          <ul class="govuk-list govuk-list--bullet">
-          <li>White and Black Caribbean</li>
-<li>White and Black African</li>
-<li>White and Asian</li>
-<li>Any other Mixed / Multiple ethnic background</li>
-        </ul></span>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="ethnic-group-3" name="ethnic-group" type="radio" value="mixed-or-multiple-ethnic-groups" aria-describedby="ethnic-group-3-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-3">
-          Asian / Asian British
-        </label>
-        <span id="ethnic-group-3-item-hint" class="govuk-hint govuk-radios__hint">
-          <ul class="govuk-list govuk-list--bullet">
-          <li>Indian</li>
-<li>Pakistani</li>
-<li>Bangladeshi</li>
-<li>Any other Asian background</li>
-        </ul>
-        </span>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="ethnic-group-4" name="ethnic-group" type="radio" value="white" aria-describedby="ethnic-group-4-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-4">
-          Black / African / Caribbean / Black British
-        </label>
-        <span id="ethnic-group-4-item-hint" class="govuk-hint govuk-radios__hint">
-          <ul class="govuk-list govuk-list--bullet">
-          <li>African</li>
-<li>Caribbean</li>
-
-<li>Any other Black / African / Caribbean background</li>
-        </ul>
-        </span>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
-        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
-          Other ethnic group
-        </label>
-        <span id="ethnic-group-5-item-hint" class="govuk-hint govuk-radios__hint">
-          <ul class="govuk-list govuk-list--bullet">
-          <li>Arab</li>
-          <li>Any other ethnic group</li>
-        </ul>
-        </span>
-      </div>
-      <div class="govuk-radios__divider">or</div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="ethnic-group-6" name="ethnic-group" type="radio" value="prefer-not-to-say">
-        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-6">
-          Prefer not to say
-        </label>
-      </div>
-    </div>
-  </fieldset>
-
-  <BR><BR>
-
-
-
 
 
           <a href="leader" class="govuk-button show-continue" style="display: inline;">
