--- a/app/views/prototypes/alex/add.html
+++ b/app/views/prototypes/alex/add.html
@@ -194,7 +194,7 @@
   <fieldset class="govuk-fieldset">
 
 
-          <a href="leader" class="govuk-button show-continue" style="display: inline;">
+          <a href="nationality" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
