--- a/app/views/prototypes/alex/answers-provider.html
+++ b/app/views/prototypes/alex/answers-provider.html
@@ -24,7 +24,7 @@
 
 
         
-  <h1 class="govuk-heading-m">Impact Training Limited
+  <h1 class="govuk-heading-m">Warwickshire college
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>     
 
   
