--- a/app/views/prototypes/alex/staff-totals.html
+++ b/app/views/prototypes/alex/staff-totals.html
@@ -29,35 +29,39 @@
   How many governors do you have?
             </h1>
 
+<table class="govuk-table">
+                
+  <thead class="govuk-table__head">
+    <tr class="govuk-table__row">
+      <th scope="col" class="govuk-table__header"></th>
+      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+    </tr>
+  </thead>
+  <tbody class="govuk-table__body">
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Male</th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
 
-<ul class="browse-list">
-    
-  <li class="browse-list-item">
-   <h2 class="govuk-heading-m">Male</h2>
-    
-      <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </li><br>
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Female
+      </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
 
-  <li class="browse-list-item">
-    <h2 class="govuk-heading-m">Female</h2>
-    
-    
-      
-      <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </li><br>
-
-  <li class="browse-list-item">
-    <h2 class="govuk-heading-m">Identify in another way
-    </h2>
-
-    
-       <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-    
-  </li><br>
-
-  
-
-</ul><br>
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">No</th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
+  </tbody>
+</table>
 
           <a href="age" class="govuk-button show-continue" style="display: inline;">
       Continue
