--- a/app/views/prototypes/alex/add.html
+++ b/app/views/prototypes/alex/add.html
@@ -23,14 +23,14 @@
 {% block content %}
 
 
-   <span class="govuk-caption-xl">Warwickshire college</span>
-
-
-  <main class="govuk-main-wrapper " id="main-content" role="main">
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+      
+  <h1 class="govuk-heading-m">Warwickshire college
+  <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
         
           <div class="govuk-form-group">
+
 
             <h1 class="govuk-heading-xl">
   What is their ethnicity?
@@ -38,158 +38,241 @@
 
 <h2 class="govuk-heading-m">White
 </h2>
+<table class="govuk-table">
+                
+  <thead class="govuk-table__head">
+    <tr class="govuk-table__row">
+      <th scope="col" class="govuk-table__header"></th>
+      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+    </tr>
+  </thead>
+  <tbody class="govuk-table__body">
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">English / Welsh / Scottish / Northern Irish / British
+      </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
 
-<ul class="browse-list">
-  
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Irish
+      </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
 
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="postcode">
-      English / Welsh / Scottish / Northern Irish / British
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Gypsy or Irish Traveller</th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
+
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Any other White background</th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
+
     
-    <div class="govuk-form-group">
-      <label class="govuk-label" for="postcode">
-        Irish
-      </label>
-      <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
-    
-      <div class="govuk-form-group">
-        <label class="govuk-label" for="postcode">
-          Gypsy or Irish Traveller
-        </label>
-        <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
-    
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="postcode">
-            Any other White background</label>
-          <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
-    
-          
-              
-</ul><br><br>
+  </tbody>
+</table>
+<br><br><br>
 
 <h2 class="govuk-heading-m">Mixed / Multiple ethnic groups
 </h2>
 
-<ul class="browse-list">
-  
+<table class="govuk-table">
+                
+  <thead class="govuk-table__head">
+    <tr class="govuk-table__row">
+      <th scope="col" class="govuk-table__header"></th>
+      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+    </tr>
+  </thead>
+  <tbody class="govuk-table__body">
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">White and Black Caribbean
+        
+      </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
 
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="postcode">
-      White and Black Caribbean
-    
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
-    
-    <div class="govuk-form-group">
-      <label class="govuk-label" for="postcode">
-        White and Black African
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">White and Black African
         
-      </label>
-      <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
+      </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
+
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">White and Asian
+        </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
+
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Any Other Mixed / multiple ethnic background</th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
+
     
-      <div class="govuk-form-group">
-        <label class="govuk-label" for="postcode">
-          White and Asian
-        
-        </label>
-        <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
-    
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="postcode">
-            Any other Mixed / Multiple ethnic background</label>
-          <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
-    
-          
-              
-</ul><br><br>
+  </tbody>
+</table>
+<br><br><br>
 
 <h2 class="govuk-heading-m">Asian / Asian British
 </h2>
 
-<ul class="browse-list">
-  
+<table class="govuk-table">
+                
+  <thead class="govuk-table__head">
+    <tr class="govuk-table__row">
+      <th scope="col" class="govuk-table__header"></th>
+      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+    </tr>
+  </thead>
+  <tbody class="govuk-table__body">
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Indian
+      </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
 
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="postcode">
-      Indian
-    
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
-    
-    <div class="govuk-form-group">
-      <label class="govuk-label" for="postcode">
-        Pakistani
-
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Pakistani
         
-      </label>
-      <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
-    
-      <div class="govuk-form-group">
-        <label class="govuk-label" for="postcode">
-          Bangladeshi
+      </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
 
-        
-        </label>
-        <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Bangladeshi
+        </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
+
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Chinese
+        </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Any other Asian background
+        </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
     
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="postcode">
-            Any other Asian background</label>
-          <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
-    
-          
-              
-</ul><br><br>
+  </tbody>
+</table>
+<br><br><br>
 
 <h2 class="govuk-heading-m">Black / African / Caribbean / Black British
 </h2>
 
-<ul class="browse-list">
-  
-
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="postcode">
-      African
-    
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
-    
-    <div class="govuk-form-group">
-      <label class="govuk-label" for="postcode">
-        Caribbean
+<table class="govuk-table">
+                
+  <thead class="govuk-table__head">
+    <tr class="govuk-table__row">
+      <th scope="col" class="govuk-table__header"></th>
+      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+    </tr>
+  </thead>
+  <tbody class="govuk-table__body">
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">African
         
-      </label>
-      <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
+      </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
+
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Caribbean
+      </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
+
     
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="postcode">
-            Any other Black / African / Caribbean background</label>
-          <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>      
-              
-</ul><br><br>
+
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Any other Black / African / Caribbean background
+      </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
+
+    
+  </tbody>
+</table>
+<br><br><br>
 
 <h2 class="govuk-heading-m">Other ethnic group
 </h2>
 
-<ul class="browse-list">
-  
+<table class="govuk-table">
+                
+  <thead class="govuk-table__head">
+    <tr class="govuk-table__row">
+      <th scope="col" class="govuk-table__header"></th>
+      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+      <th scope="col" class="govuk-table__header govuk-table__header--numeric"></th>
+    </tr>
+  </thead>
+  <tbody class="govuk-table__body">
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Arab
+      </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
 
-  <div class="govuk-form-group">
-    <label class="govuk-label" for="postcode">
-      Arab
     
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>
+
     
+
     
-        <div class="govuk-form-group">
-          <label class="govuk-label" for="postcode">
-            Any other ethnic group</label>
-          <input class="govuk-input govuk-input--width-10" id="postcode" name="postcode" type="text" autocomplete="postal-code"></div>      
-              
-</ul><br><br>
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Any other ethnic group
+        </th>
+      <td class="govuk-table__cell govuk-table__cell--numeric"></td>
+      <td class="govuk-table__cell govuk-table__cell--numeric"><div class="govuk-form-group">
+       <input class="govuk-input govuk-input--width-2" id="width-2" name="width-2" type="text"></div></td>
+    </tr>
+    
+  </tbody>
+</table>
+<br><br><br>
 
   <fieldset class="govuk-fieldset">
 
